--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,36 @@
-*.agdai
-MAlonzo/**
+# Игнорировать временные файлы
+*.log
+*.swp
+*.tmp
+
+# Игнорировать файлы конфигурации
+config.ini
+config.yaml
+
+# Игнорировать файлы с настройками окружения
+.env
+
+# Игнорировать папку с зависимостями
+node_modules/
+venv/
+.env/
+
+# Игнорировать файлы сборки
+build/
+dist/
+
+# Игнорировать локальные файлы базы данных
+*.sqlite
+*.db
+
+# Игнорировать файлы с личной информацией
+secret_key.txt
+credentials.json
+
+# Игнорировать файлы IDE
+.idea/
+.vscode/
+
+# Игнорировать файлы конфигурации системы
+*.iml
+*.editorconfig
