--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   db:
     image: annalevina/mysql-bookstore
@@ -9,6 +8,8 @@ services:
       MYSQL_PASSWORD: 123
     ports:
       - "3307:3306"
+    networks:
+      - bookstore-network
 
   api:
     build: .
@@ -17,4 +18,10 @@ services:
     depends_on:
       - db
     ports:
-      - "8002:8002"
+      - "8002:8000"
+    networks:
+      - bookstore-network
+
+networks:
+  bookstore-network:
+    driver: bridge
